src/test/deca/context/invalid/class/method-param-void.deca
// Programme testant une déclaration de méthode avec un paramètre void

class A {
    void method(void i) {
        
    }
}